Explore Menu UI Fixed for Dark Mode

--- a/frontend/src/components/AppDownlad/AppDownload.css
+++ b/frontend/src/components/AppDownlad/AppDownload.css
@@ -1,9 +1,14 @@
 .appdownload {
   margin: auto auto;
-  margin-top: 100px;
+  padding: 50px 0;
   font-size: max(3vw, 20px);
   text-align: center;
   font-weight: 500;
+  /* background-color: var(--bg-color, #ffffff); */
+}
+
+.appdownload p {
+  color: #111111;
 }
 
 .app-download-platforms {
@@ -25,7 +30,3 @@
   box-shadow: 0 2px 8px #a1a1a18e;
 }
 
-.app-download-platforms img.image-dark {
-  border: 1px solid #a1a1a18e;
-  border-radius: 15px;
-}
